Fixed various Sonar issues (performance, SimpleDateFormat without synchronization, etc)
git-svn-id: https://svn.apache.org/repos/asf/mina/mina/branches/2.0@1418371 13f79535-47bb-0310-9956-ffa450edef68