@@ -161,7 +161,7 @@ public class AvailablePortFinder {
 
             try {
                 s = new ServerSocket(i);
-                result.add(new Integer(i));
+                result.add(Integer.valueOf(i));
             } catch (IOException e) {
                 // Do nothing
             } finally {
